--- a/signup.html
+++ b/signup.html
@@ -6,11 +6,6 @@
     <meta name="description" content="" />
     <title>Newsletter Signup</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.1/examples/sign-in/"
-    />
-
     <!-- Bootstrap core CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -19,22 +14,6 @@
       crossorigin="anonymous"
     />
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet" />
   </head>
@@ -42,8 +21,10 @@
     <form action="/" class="form-signin" method="POST">
       <img
         class="mb-4"
-        src="./public/images/IMG_5467.PNG"
-        alt="picture - pritish"
+        src="images/image.jpg"
+        alt="picture"
+        width="72"
+        height="72"
       />
       <h1 class="h3 mb-3 fw-normal">Signup to my Newsletter</h1>
 
